--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>fetchData</title>
+    <link rel="stylesheet" href="./style.css">
   </head>
   <body>
     <p>Product lists</p>
+    <div id="productList"></div>
   </body>
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+  <script src="./fetchData.js"></script>
 </html>
